tests/baselines/reference/decoratorOnClassMethod8(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
decoratorOnClassMethod8.ts(4,6): error TS1241: Unable to resolve signature of method decorator when called as an expression.
  The runtime will invoke the decorator with 3 arguments, but the decorator expects 1.
decoratorOnClassMethod8.ts(4,6): error TS1270: Decorator function return type 'C' is not assignable to type 'void | TypedPropertyDescriptor<() => void>'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decoratorOnClassMethod8.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    class C {
        @dec method() {}
         ~~~
!!! error TS1241: Unable to resolve signature of method decorator when called as an expression.
!!! error TS1241:   The runtime will invoke the decorator with 3 arguments, but the decorator expects 1.
         ~~~
!!! error TS1270: Decorator function return type 'C' is not assignable to type 'void | TypedPropertyDescriptor<() => void>'.
    }